--- a/app/src/main/res/layout/item_shot.xml
+++ b/app/src/main/res/layout/item_shot.xml
@@ -1,19 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="168dp" />
+        android:layout_height="match_parent"
+        tools:ignore="contentDescription"/>
 
-    <TextView
-        android:id="@+id/title"
-        android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="32dp" />
+    <LinearLayout
+        android:layout_margin="8dp"
+        android:background="@color/color_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
-</LinearLayout>
+        android:layout_alignEnd="@+id/image"
+        android:layout_alignStart="@+id/image"
+        android:layout_alignBottom="@id/image"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/title"
+            android:textAppearance="?android:textAppearanceLarge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/description"
+            android:maxLines="2"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+</RelativeLayout>
