--- a/app/src/main/res/layout/item_shot.xml
+++ b/app/src/main/res/layout/item_shot.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="600dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <ImageView
